replaced getFirst() with get(0) as getFirst() was added in a later version of java